--- a/clone-messenger/src/components/Layouts/ContentDefaultLayout/ContentDefaultLayout.module.scss
+++ b/clone-messenger/src/components/Layouts/ContentDefaultLayout/ContentDefaultLayout.module.scss
@@ -14,10 +14,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-bottom: 12px;
-    margin-top: 20px;
-    margin-right: 16px;
-    margin-left: 16px;
+    // margin-bottom: 12px;
+    // margin-top: 20px;
+    // margin-right: 16px;
+    // margin-left: 16px;
+    padding: 12px 16px 4px 16px;
+    @media (max-width: $media-width-breakpoint) {
+        display: none;
+    }
+
 }
 
 .title {
@@ -25,6 +30,11 @@
     font-weight: map-get($FontWeights, 700);
     text-align: left;
     word-break: break-word;
+    padding: 6px 4px 6px 0px;
+
+    &>h1 {
+        margin-top: -7px;
+    }
 }
 
 .actions {
