--- a/clone-messenger/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/clone-messenger/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,5 +1,6 @@
 @import '../../GlobalStyles/colors.scss';
-
+$max-width-content : 360px;
+$min-width-content : 88px;
 .wrapper {
     width: 100%;
     height: 100%;
@@ -7,20 +8,30 @@
     flex-direction: row;
     align-items: center;
 }
-.navigation{
+
+.navigation {
     display: flex;
     height: 100%;
     flex-direction: row;
 }
-.menu{
+
+.menu {
     height: 100%;
     border-right: 1px solid $mediaInnerBorder;
 }
+
 .content-menu {
     height: 100%;
-    width: 360px;
     flex: 1;
+    flex-shrink: 0;
     border-right: 1px solid $mediaInnerBorder;
+    // max-width: $max-width-content;
+    @media (min-width : $media-width-breakpoint) {
+        width: $max-width-content;
+    }
+    @media (max-width : $media-width-breakpoint) {
+        width: $min-width-content;
+    }
 }
 
 .content {
