--- a/clone-messenger/src/components/MessageItem/MessageItem.module.scss
+++ b/clone-messenger/src/components/MessageItem/MessageItem.module.scss
@@ -1,13 +1,20 @@
 @use "sass:map";
 @import '../GlobalStyles/colors.scss';
 
+.container {
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
 .wrapper {
     max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0px 6px;
-    padding: 10px;
+    padding: 10px 8px;
     border-radius: 8px;
 
     &.active {
@@ -17,10 +24,21 @@
     &:hover {
         background-color: $webWash;
     }
+   
+}
+
+.action-button {
+    position: absolute;
+    right: 20px;
+    display: none;
+    .container:hover & {
+        display: flex;
+    }
 }
 
 .avatar {
     padding-right: 10px;
+    margin-top: -10px;
 }
 
 .content {
@@ -60,6 +78,7 @@
     align-items: center;
     justify-content: flex-start;
 }
+
 .dot-space {
     margin: 0px 3px;
 }
