add message content, message item, fix avatar

--- a/clone-messenger/src/components/GlobalStyles/GlobalStyles.scss
+++ b/clone-messenger/src/components/GlobalStyles/GlobalStyles.scss
@@ -9,6 +9,7 @@
 :root {
     --font-family: 'Segoe UI Historic', , ' sans-serif';
     --font-size-input : .9375rem;
+    --font-size-message-name : 17px;
 }
 
 * {
