--- a/clone-messenger/src/components/GlobalStyles/colors.scss
+++ b/clone-messenger/src/components/GlobalStyles/colors.scss
@@ -12,9 +12,14 @@ $primaryText : #050505;
 //Border
 $mediaInnerBorder: rgba(0, 0, 0, 0.1);
 //Icon
+$secondaryIcon: #f5f5f5;
 $placeholderIcon :#65676B;
 $primaryIcon: #050505;
-
+$shadow1: rgba(0, 0, 0, 0.1);
+$shadow2: rgba(0, 0, 0, 0.2);
+$shadow5: rgba(0, 0, 0, 0.5);
+$shadow8: rgba(0, 0, 0, 0.8);
+$blue : rgb(0, 132, 255);
 //Bold
 $FontWeights : (
     500 : 500,
