--- a/clone-messenger/src/components/MessageItem/MessageItem.module.scss
+++ b/clone-messenger/src/components/MessageItem/MessageItem.module.scss
@@ -6,71 +6,63 @@
     display: flex;
     align-items: center;
     position: relative;
+    padding: 8px 6px;
+    margin: 0px 6px;
+    border-radius: 8px;
+    &:hover {
+        background-color: $webWash;
+    }
+    &.active {
+        background-color: $webWash;
+    }
 }
 
 .wrapper {
     max-width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin: 0px 6px;
-    padding: 10px 8px;
-    border-radius: 8px;
-
-    &.active {
-        background-color: $webWash;
-    }
-
-    &:hover {
-        background-color: $webWash;
-    }
-   
+    justify-content: center;
+    margin-left: -6px;
 }
 
-.action-button {
-    position: absolute;
-    right: 20px;
-    display: none;
-    .container:hover & {
-        display: flex;
-    }
-}
 
 .avatar {
     padding-right: 10px;
     margin-top: -10px;
 }
 
-.content {
-    color: $primaryText;
-    flex: 1;
+// .content {
+//     color: $primaryText;
+//     flex: 1;
+//     @media (max-width : $media-width-breakpoint) {
+//         display: none;
+//     }
+// }
 
-}
+// .name {
+//     color: $primaryText;
+//     font-weight: map-get($FontWeights, 500);
+//     text-align: left;
+//     font-size: var(--font-size-input);
 
-.name {
-    color: $primaryText;
-    font-weight: map-get($FontWeights, 500);
-    text-align: left;
-    font-size: var(--font-size-input);
+//     // overflow-x: hidden;
+//     // white-space: nowrap;
+//     // text-overflow: ellipsis;
+//     // max-width: 100%;
 
-    // overflow-x: hidden;
-    // white-space: nowrap;
-    // text-overflow: ellipsis;
-    // max-width: 100%;
-
-    // position: relative;
-    // &>span {
-    //     position: absolute;
-    //     left: 0;
-    //     right: 0;
-    //     white-space: nowrap;
-    //     overflow: hidden;
-    //     text-overflow: ellipsis;
-    // }
-    &.active {
-        font-weight: map-get($FontWeights, 700);
-    }
-}
+//     // position: relative;
+//     // &>span {
+//     //     position: absolute;
+//     //     left: 0;
+//     //     right: 0;
+//     //     white-space: nowrap;
+//     //     overflow: hidden;
+//     //     text-overflow: ellipsis;
+//     // }
+//     &.active {
+//         font-weight: map-get($FontWeights, 700);
+//     }
+// }
 
 .message {
     width: 100%;
@@ -78,7 +70,27 @@
     align-items: center;
     justify-content: flex-start;
 }
-
 .dot-space {
     margin: 0px 3px;
 }
+
+.more {
+    @media (max-width : $media-width-breakpoint) {
+        display: none;
+    }
+}
+.action-button {
+    position: absolute;
+    right: 20px;
+    display: none;
+    .container:hover & {
+        display: flex;
+    }
+    @media (max-width : $media-width-breakpoint) {
+        display: none;
+        .container:hover & {
+            display: none;
+        }
+    }
+}
+
