--- a/clone-messenger/src/components/Navigation/Navigation.module.scss
+++ b/clone-messenger/src/components/Navigation/Navigation.module.scss
@@ -12,7 +12,8 @@
 }
 .avatar {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    padding-top: 16px;
-    padding-bottom: 12px;
+    padding: 16px 8px 12px ;
 }
