Fix message content css, add tooltip, iconbutton custom, add message text chat

--- a/clone-messenger/src/components/GlobalStyles/colors.scss
+++ b/clone-messenger/src/components/GlobalStyles/colors.scss
@@ -5,9 +5,17 @@ $background : #ffffff;
 // Color Background
 $webWash : #F0F2F5;
 $grayBackground : #f8f8f8;
+$blueBackgroundMessage : rgb(0, 132, 255, 1);
+$messengerCardPrimaryBackground: #FFFFFF;
+$messengerCardWashBackground: #E4E6EB;
+
+$toolTipPrimaryBackground: #242526;
+$toolTipSecondaryBackground: #323436;
 //Color Tex;
+$whiteText : #FFFFFF;
 $secondaryText: #65676B;
 $grayText : #595959;
+$gray2Text :#E4E6EB;
 $primaryText : #050505;
 //Border
 $mediaInnerBorder: rgba(0, 0, 0, 0.1);
@@ -20,9 +28,9 @@ $shadow2: rgba(0, 0, 0, 0.2);
 $shadow5: rgba(0, 0, 0, 0.5);
 $shadow8: rgba(0, 0, 0, 0.8);
 $blue : rgb(0, 132, 255);
+
 //Bold
-$FontWeights : (
-    500 : 500,
+$FontWeights : (500 : 500,
     700 : 700,
     bold: bold,
 );
