--- a/clone-messenger/src/components/ui-kit/Avatar/Avatar.module.scss
+++ b/clone-messenger/src/components/ui-kit/Avatar/Avatar.module.scss
@@ -15,6 +15,9 @@
             display: none;
         }
     }
+    & .force-content{
+        display: unset;
+    }
 
     &:hover {
         background-color: $webWash;
