--- a/clone-messenger/src/components/MessageContent/MessageContent.module.scss
+++ b/clone-messenger/src/components/MessageContent/MessageContent.module.scss
@@ -27,6 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid $mediaInnerBorder;
 }
 
 .btn-icon {
@@ -47,11 +48,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .message {
     flex: 1;
     width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .input {
@@ -92,6 +97,7 @@
 
     .icon {
         padding: 6px 16px;
+        text-align: center;
     }
 
     svg {
