--- a/clone-messenger/src/components/MessageList/MessageList.module.scss
+++ b/clone-messenger/src/components/MessageList/MessageList.module.scss
@@ -16,13 +16,28 @@
     flex-grow: 1;
 }
 
+.app {
+    padding: 5px 20px;
+    min-height: 54px;
+    border-top: 1px solid $mediaInnerBorder;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .app-install {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0px 20px;
-    min-height: 54px;
-    border-top: 1px solid $mediaInnerBorder;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    border-radius: 6px;
+    padding: 6px 0px;
+    &:hover {
+        background-color: $webWash;
+    }
 
     p {
         margin-left: 10px;
@@ -30,6 +45,7 @@
         text-align: left;
         font-size: var(--font-size-input);
         font-weight: map-get($FontWeights, 500);
+
         @media (max-width : $media-width-breakpoint) {
             display: none;
         }
