Add treeview menu

--- a/clone-messenger/src/components/MessageContent/DefaultMessageContent/DefaultMessageContent.module.scss
+++ b/clone-messenger/src/components/MessageContent/DefaultMessageContent/DefaultMessageContent.module.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
 
-@import '../GlobalStyles/colors.scss';
+@import '../../GlobalStyles/colors.scss';
 
 .content {
     height: 100%;
