--- a/clone-messenger/src/components/ConversationList/ConversationList.module.scss
+++ b/clone-messenger/src/components/ConversationList/ConversationList.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     max-height: 100%;
+    height: 100%;
 }
 
 .search {
@@ -12,7 +13,7 @@
 }
 
 .message-list {
-    overflow-y: auto;
+    overflow-y: hidden;
     flex-grow: 1;
 }
 
