--- a/clone-messenger/src/components/MessageContent/Message/Message.module.scss
+++ b/clone-messenger/src/components/MessageContent/Message/Message.module.scss
@@ -5,53 +5,15 @@
     align-items: flex-end;
     justify-content: center;
 }
-.messages-container{
+
+.messages-container {
     flex: 1;
-}
-.messages {
-    &:not(:first-of-type, :last-of-type) {
-        .message {
-            .message-row {
-                .user-content {
-                    border-top-right-radius: 4px;
-                    border-bottom-right-radius: 4px;
-                }
-                .receiver-content {
-                    border-top-left-radius: 4px;
-                    border-bottom-left-radius: 4px;
-                }
-            }
-        }
-    }
 
-    &:first-of-type {
-        .message {
-            .message-row {
-                .user-content {
-                    border-bottom-right-radius: 4px;
-                }
-                .receiver-content {
-                    border-bottom-left-radius: 4px;
-                }
-            }
-        }
-    }
-
-    &:last-of-type {
-        .message {
-            .message-row {
-                .user-content {
-                    border-top-right-radius: 4px;
-                }
-                .receiver-content {
-                    border-top-left-radius: 4px;
-                }
-            }
-        }
-    }
 }
 
 .message {
+    padding-right: 2px;
+    margin-bottom: 2px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -60,14 +22,59 @@
     &:hover .action-menu {
         visibility: visible;
     }
+    
+    &:not(:first-of-type, :last-of-type) {
+        .message-row {
+            .user-content {
+                border-top-left-radius: 18px;
+                border-bottom-left-radius: 18px;
+            }
+
+            .receiver-content {
+                border-top-right-radius: 18px;
+                border-bottom-right-radius: 18px;
+            }
+        }
+    }
+
+    &:first-of-type{
+        .message-row {
+            .user-content {
+                border-top-right-radius: 18px;
+                border-top-left-radius: 18px;
+                border-bottom-left-radius: 18px;
+            }
+
+            .receiver-content {
+                border-top-right-radius: 18px;
+                border-top-left-radius: 18px;
+                border-bottom-right-radius: 18px;
+            }
+        }
+    }
+
+    &:last-of-type {
+        .message-row {
+            .user-content {
+                border-bottom-right-radius: 18px;
+                border-top-left-radius: 18px;
+                border-bottom-left-radius: 18px;
+            }
+
+            .receiver-content {
+                border-top-right-radius: 18px;
+                border-bottom-right-radius: 18px;
+                border-bottom-left-radius: 18px;
+            }
+        }
+    }
 }
+
 
 .message-row {
     flex: 1;
     display: flex;
     align-items: center;
-
-
 }
 
 .content {
@@ -77,7 +84,7 @@
     word-break: break-all;
     overflow-y: hidden;
     padding: 7px 12px 8px;
-    border-radius: 18px;
+    border-radius: 4px;
     background-color: $blueBackgroundMessage;
     font-size: var(--font-size-input);
 }
@@ -94,11 +101,9 @@
 
 .status {
     width: 22px;
+    margin-bottom: 2px;
 }
 
-.divide {
-    height: 2px;
-}
 
 //Receiver
 .message-row-receiver {
