--- a/clone-messenger/src/components/MessageItem/MessageItem.module.scss
+++ b/clone-messenger/src/components/MessageItem/MessageItem.module.scss
@@ -9,6 +9,7 @@
     padding: 8px 6px;
     margin: 1px 8px;
     border-radius: 8px;
+    cursor: pointer;
     &:hover {
         background-color: $webWash;
     }
