--- a/clone-messenger/src/components/MessageContent/MessageContent.module.scss
+++ b/clone-messenger/src/components/MessageContent/MessageContent.module.scss
@@ -55,8 +55,9 @@
 .message {
     flex: 1;
     width: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
+    // overflow-y: auto;
+    // overflow-x: hidden;
+    overflow: hidden;
 }
 
 .input {
