--- a/clone-messenger/src/components/Login/LoginPage.module.scss
+++ b/clone-messenger/src/components/Login/LoginPage.module.scss
@@ -54,8 +54,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    flex-wrap: wrap;
     button {
+        margin-top: 10px;
         +button {
             margin-left: 10px;
         }
@@ -73,7 +74,7 @@
 
 .footer {
     width: 100%;
-    margin-bottom: 66px;
+    margin-bottom: 33px;
     text-align: center;
     position: absolute;
     bottom: 0;
