--- a/clone-messenger/src/components/MessageItem/MessageItem.module.scss
+++ b/clone-messenger/src/components/MessageItem/MessageItem.module.scss
@@ -24,8 +24,9 @@
     max-width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     margin-left: -6px;
+    width: 100%;
 }
 
 
