--- a/clone-messenger/src/components/ui-kit/Scroll/ScrollLoadMore.scss
+++ b/clone-messenger/src/components/ui-kit/Scroll/ScrollLoadMore.scss
@@ -1,3 +1,5 @@
+@import '../../GlobalStyles/colors.scss';
+
 .hideScroll {
 
 
@@ -6,7 +8,49 @@
     }
 }
 
+.wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .scroll {
     overflow-y: auto;
     height: 100%;
+}
+
+.scroll-button {
+    position: absolute;
+    left: 50%;
+    bottom: -100px;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 20px rgb(0 0 0 / 10%);
+    border-color: rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: $background;
+    transition-property: bottom, opacity;
+    transition-duration: 200ms;
+    transition-timing-function: linear;
+    opacity: 0;
+    height: 35px;
+    width: 35px;
+
+    overflow: hidden;
+
+    &.active {
+        opacity: 1;
+        bottom: 5%;
+    }
+
+    &:hover {
+        background-color: $webWash;
+    }
+
+    svg {
+        background: transparent;
+    }
 }
