--- a/clone-messenger/src/components/GlobalStyles/colors.scss
+++ b/clone-messenger/src/components/GlobalStyles/colors.scss
@@ -8,6 +8,7 @@ $grayBackground : #f8f8f8;
 $blueBackgroundMessage : rgb(0, 132, 255, 1);
 $messengerCardPrimaryBackground: #FFFFFF;
 $messengerCardWashBackground: #E4E6EB;
+$secondaryBackground: #f5f5f5;
 
 $toolTipPrimaryBackground: #242526;
 $toolTipSecondaryBackground: #323436;
