Pending: Upload file API (upload:done, fill data react : inprocess)

--- a/clone-messenger/src/components/ui-kit/Avatar/Avatar.module.scss
+++ b/clone-messenger/src/components/ui-kit/Avatar/Avatar.module.scss
@@ -22,7 +22,7 @@
         cursor: pointer;
     }
 
-    & .force-content {
+    & .force-display-content {
         display: unset;
     }
 
@@ -50,5 +50,19 @@
 
     &.active {
         font-weight: map-get($FontWeights, 700);
+    }
+}
+
+.loading{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 8px 16px;
+ 
+}
+.more{
+    width: 100%;
+    @media (max-width: $media-width-breakpoint) {
+        display: none;
     }
 }
