--- a/clone-messenger/src/components/Login/LoginPage.module.scss
+++ b/clone-messenger/src/components/Login/LoginPage.module.scss
@@ -55,8 +55,10 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
     button {
         margin-top: 10px;
+
         +button {
             margin-left: 10px;
         }
@@ -93,5 +95,28 @@
 
     a:hover {
         text-decoration: underline;
+    }
+}
+
+.icon-upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    & .avatar {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+
+    input {
+        outline: none;
+        border: none;
     }
 }
