--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,9 +5,13 @@
     font-family: Segoe UI Historic;
     src: url('../../assets/fonts/SEGOEUI.TTF');
 }
+@font-face {
+    font-family: Arial;
+    src: url('../../assets/fonts/arial.ttf');
+}
 
 :root {
-    --font-family: 'Segoe UI Historic', ' sans-serif';
+    --font-family: 'Segoe UI Historic', 'sans-serif';
     --font-size-input : .9375rem;
     --font-size-message-name : 17px;
 }
@@ -22,9 +26,9 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    font-family: var(--font-family);
-    font-family: Arial, Helvetica, sans-serif;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-family);
     font-size: 12px;
     line-height: 1.34;
     text-rendering: optimizespeed;
