--- a/src/components/Login/LoginPage.module.scss
+++ b/src/components/Login/LoginPage.module.scss
@@ -13,10 +13,11 @@
 
 .logo {
     width: 100%;
-    height: 120px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1;
 
     img {
         width: 75px;
@@ -24,9 +25,17 @@
     }
 }
 
+.wrap-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .content {
     width: 100%;
-    margin: 5px 0 12px;
+    margin: 5px 0 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +49,7 @@
         font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
         font-size: 17px;
         height: 42px;
-        margin-bottom: 12px;
+        margin-bottom: 10px;
         margin-left: auto;
         margin-right: auto;
         padding: 0 16px;
@@ -50,7 +59,7 @@
 
 .buttons {
     width: 100%;
-    padding: 20px 0px;
+    padding: 5px 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -70,16 +79,22 @@
     line-height: 40px;
     text-align: center;
     font-weight: 450;
-    margin-top: 24px;
-    margin-bottom: 45px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
+
+.text {
+    font-size: 20px;
+    text-align: center;
+    font-weight: 450;
+}
+
 
 .footer {
     width: 100%;
+    margin-top: 30px;
     margin-bottom: 33px;
     text-align: center;
-    position: absolute;
-    bottom: 0;
 
     .divide {
         visibility: hidden;
